--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,11 +1,26 @@
+name: "Build Test & Unit Test"
+
 on:
   workflow_dispatch:
   push:
+    paths:
+      - "src/**"
+      - "test/**"
+  pull_request:
+    paths:
+      - "src/**"
+      - "test/**"
 
 jobs:
   run-test:
     name: "run tests"
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - windows-latest
+          - ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
