--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,21 +18,30 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - windows-latest
-          - ubuntu-latest
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-latest]
+        include:
+          - { python-version: "pypy-3.10", os: windows-latest }
+          - { python-version: "pypy-3.10", os: macos-latest }
+          - { python-version: "3.8", os: windows-latest }
+          - { python-version: "3.8", os: macos-latest }
+          - { python-version: "3.12", os: windows-latest }
+          - { python-version: "3.12", os: macos-latest }
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: setup python3
-        uses: actions/setup-python@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
-      - name: install dependencies
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
         run: |
-          python3 -m pip install -e .
+          python -m pip install .
+
       - name: run tests
         id: tests
-        # skip benchmark_test.py
         run: |
-          python3 test/all_test.py --ignore benchmark
+          python test/all_test.py --ignore benchmark
