--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest]
         include:
           - { python-version: "pypy-3.10", os: windows-latest }
@@ -44,4 +44,8 @@ jobs:
       - name: run tests
         id: tests
         run: |
+          if [[ "${{ matrix.python-version }}" == "3.12" ]]; then
+            python test/all_test.py
+          fi
           python test/all_test.py --ignore benchmark
+
