run benchmark on python-version 3.12

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -41,12 +41,15 @@ jobs:
         run: |
           python -m pip install .
 
-      - name: run tests
+      - name: run tests with benchmark
+        if: ${{ matrix.python-version == '3.12' }}
         id: tests
         run: |
-          if [ "${{ matrix.python-version }}" = "3.12" ]; then
             python test/all_test.py
-          else
-            python test/all_test.py --ignore benchmark
-          fi
+
+      - name: run tests without benchmark
+        if: ${{ matrix.python-version != '3.12' }}
+        id: tests_no_benchmark
+        run: |
+            python test/all_test.py --no-benchmark
 
