--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,7 +24,7 @@ jobs:
           - { python-version: "pypy-3.10", os: windows-latest }
           - { python-version: "pypy-3.10", os: macos-latest }
           - { python-version: "3.8", os: windows-latest }
-          - { python-version: "3.8", os: macos-latest }
+          - { python-version: "3.8", os: macos-13 } # https://github.com/actions/setup-python/issues/850
           - { python-version: "3.12", os: windows-latest }
           - { python-version: "3.12", os: macos-latest }
 
