Add setup.py to GitHub Actions workflow, close #13

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -6,10 +6,12 @@ on:
     paths:
       - "src/**"
       - "test/**"
+      - "setup.py"
   pull_request:
     paths:
       - "src/**"
       - "test/**"
+      - "setup.py"
 
 jobs:
   run-test:
