--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -6,10 +6,14 @@ on:
     paths:
       - "src/**"
       - "test/**"
+      - "setup.py"
+      - "CMakeLists.txt"
   pull_request:
     paths:
       - "src/**"
       - "test/**"
+      - "setup.py"
+      - "CMakeLists.txt"
 
 jobs:
   run-test:
