--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,17 @@ target_include_directories(cjson PUBLIC ${SRC_PATH} ${DEPS_PATH} ${Python3_INCLU
 target_link_libraries(cjson ${Python3_LIBRARIES})
 set_target_properties(cjson PROPERTIES PREFIX "")
 set_target_properties(cjson PROPERTIES LINKER_LANGUAGE C)
+set_property(TARGET cjson PROPERTY C_STANDARD 17)
+set_property(TARGET cjson PROPERTY C_STANDARD_REQUIRED ON)
+set_property(TARGET cjson PROPERTY CXX_STANDARD 17)
+set_property(TARGET cjson PROPERTY CXX_STANDARD_REQUIRED ON)
+
+if(APPLE)
+    set_target_properties(cjson PROPERTIES SUFFIX ".so")
+endif(APPLE)
+if (MSVC)
+    target_compile_options(cjson PUBLIC /std:c++17 /std:c17)
+endif(MSVC)
+if(WIN32)
+    set_target_properties(cjson PROPERTIES SUFFIX ".pyd")
+endif(WIN32)
