Squashed commit of the following:
commit cb57fbe9a13ef9f1e83fed7a6eb42032254a23c4
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:52:19 2024 +0800

    test: add trigger when unittest.yml is changed

commit 4c654989caeb0351dcc9e2d2c27c94f895dc1ae7
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:51:25 2024 +0800

    test: switch back to normal install

commit 7bf6bcd4628c4baa30a2399a12e63b52ee7201ef
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:44:58 2024 +0800

    test: ok, f**k it, drop pypy and py38

commit 812256be6aab9ad5137068bf2258e1868d4f106c
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:36:24 2024 +0800

    build: try fix pypy

commit de95980e439f2cc9e1d5dc845d63eb431332eb93
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:30:05 2024 +0800

    test: fix

commit f6c67bdbd5fca4d398bfd388ee2463157e810b48
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:27:30 2024 +0800

    test: fix

commit 4d9abb61318b840a252d3976ac001e0af4f525f3
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:24:54 2024 +0800

    test: use venv

commit 38baeed102f40b555594b0d8fcd59860c1af6c6f
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:17:19 2024 +0800

    build: try fix build for pypy mac

commit 0160b4f1e82f813e731632667ec9b207a936b69d
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:11:43 2024 +0800

    build: try fix pypy compile

commit 4155ad63e82e840c80990e47215183d4d99743f2
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 01:06:39 2024 +0800

    fix: try to fix pypy on macos

commit 5601c4382fddc986cf57a66170704a1a705f8779
Author: antares0982@gmail.com <antares0982@gmail.com>
Date:   Tue Apr 30 00:48:46 2024 +0800

    test: revert unittest

commit 736e00c57a18adffc1c4e8ed0d151aa5c989099c
Author: ant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.12)
-
+cmake_minimum_required(VERSION 3.18)
+# find correct python package is implemented in cmake 3.15, find other implementation is in 3.18
 project(pycjson C CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 17)
-
 find_package(Python3 COMPONENTS Development)
 
 set(SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -27,6 +26,8 @@ endif(APPLE)
 if (MSVC)
     target_compile_options(cjson PUBLIC /std:c++17 /std:c17)
 endif(MSVC)
-if(WIN32)
-    set_target_properties(cjson PROPERTIES SUFFIX ".pyd")
-endif(WIN32)
+# if(WIN32)
+#     set_target_properties(cjson PROPERTIES SUFFIX ".pyd")
+# endif(WIN32)
+
+install(TARGETS cjson LIBRARY DESTINATION .)
