--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -8,12 +8,14 @@ on:
       - "test/**"
       - "setup.py"
       - "CMakeLists.txt"
+      - ".github/workflows/unittest.yml"
   pull_request:
     paths:
       - "src/**"
       - "test/**"
       - "setup.py"
       - "CMakeLists.txt"
+      - ".github/workflows/unittest.yml"
 
 jobs:
   run-test:
@@ -22,13 +24,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest]
         include:
-          - { python-version: "pypy-3.10", os: windows-latest }
-          - { python-version: "pypy-3.10", os: macos-latest }
-          - { python-version: "3.8", os: windows-latest }
-          - { python-version: "3.8", os: macos-latest }
+          - { python-version: "3.9", os: windows-latest }
+          - { python-version: "3.9", os: macos-latest }
           - { python-version: "3.12", os: windows-latest }
           - { python-version: "3.12", os: macos-latest }
 
@@ -41,7 +41,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install py-cjson
         run: |
           python -m pip install .
 
