fix: add march option for simd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ file(GLOB_RECURSE SRC_C_FILES ${SRC_PATH}/*.c)
 file(GLOB_RECURSE DEPS_CPP_FILES ${DEPS_PATH}/*.cpp)
 
 add_library(cjson SHARED ${SRC_C_FILES} ${DEPS_CPP_FILES})
+target_compile_options(cjson PUBLIC -march=native)
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    message("Release mode")
+    target_compile_options(cjson PUBLIC -O3)
+endif (CMAKE_BUILD_TYPE STREQUAL "Release")
 target_include_directories(cjson PUBLIC ${SRC_PATH} ${DEPS_PATH} ${Python3_INCLUDE_DIRS})
 target_link_libraries(cjson ${Python3_LIBRARIES})
 set_target_properties(cjson PROPERTIES PREFIX "")
