build: fix cmake args

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,24 @@ set_property(TARGET cjson PROPERTY C_STANDARD_REQUIRED ON)
 set_property(TARGET cjson PROPERTY CXX_STANDARD 17)
 set_property(TARGET cjson PROPERTY CXX_STANDARD_REQUIRED ON)
 
+# optimize for Release build
+if (CMAKE_BUILD_TYPE MATCHES ".*Rel.*")
+    message("Release mode, enabling maximal optimization")
+    if (MSVC)
+        target_compile_options(cjson PUBLIC /Ox)
+    else (MSVC)
+        target_compile_options(cjson PUBLIC -O3)
+    endif (MSVC)
+else(CMAKE_BUILD_TYPE MATCHES ".*Rel.*")
+    message("Debug mode, enabling debug symbols")
+    if (MSVC)
+        target_compile_options(cjson PUBLIC /Zi)
+    else (MSVC)
+        target_compile_options(cjson PUBLIC -g)
+    endif(MSVC)
+endif (CMAKE_BUILD_TYPE MATCHES ".*Rel.*")
+
+
 if(APPLE)
     set_target_properties(cjson PROPERTIES SUFFIX ".so")
 endif(APPLE)
