--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ file(GLOB_RECURSE DEPS_CPP_FILES ${DEPS_PATH}/*.cpp)
 
 add_library(cjson SHARED ${SRC_C_FILES} ${DEPS_CPP_FILES})
 
-if (not MSVC)
+if (NOT MSVC)
     target_compile_options(cjson PUBLIC -mavx512bw -mavx512vl)
-endif (not MSVC)
+endif (NOT MSVC)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     message("Release mode")
